--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -617,3 +617,7 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.Layout {
+  min-height: 90vh;
+}
